# DailyTaskPlanner

./: .gitignore  desktop.ini  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: main.py  run_dev.py
backend/app/core/: config.py
backend/app/db/models/: __init__.py  base.py  reminder.py  task.py  user.py
backend/app/routers/auth/: auth.py
backend/app/routers/reminders/: reminder.py
backend/app/routers/tasks/: task.py
backend/app/schemas/: reminder.py  task.py
backend/app/scripts/cmd/: migrate_gen.py  migrate_up.py
frontend/: .gitignore  package-lock.json  package.json
